--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,10 @@
     <color name="colorPrimary">#ffffff</color>
     <color name="colorPrimaryDark">#ffffff</color>
     <color name="colorAccent">#ffffff</color>
+    <color name="absoluteBlack">#000000</color>
+    <color name="pureWhite">#ffffff</color>
+    <color name="default_button_bg">#F3DFCB</color>
+    <color name="default_active_button_bg">#7FD1AE</color>
 
     <!-- Screens background color-->
     <color name="bg_screen1">#f64c73</color>
